# 2025_8_D_BE

./: .gitignore  README.md
.cursor/rules/: achitecture.mdc  dbrule.mdc  developmentdetail.mdc  etlrule.mdc  jsonshape.mdc  projectbase.mdc  promptengineering.mdc  searchrule.mdc
backend/: .env.example  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  run.py
backend/db/init/: 01_create_extensions.sql  02_schema.sql  04_migrate_remove_e_cig_experience.sql  05_remove_unused_lookup_table.sql  06_metadata_tables.sql  07_fix_panel_summary_segments_schema.sql  08_optimize_indexes.sql  09_optimize_unstructured_search.sql  09_optimize_unstructured_search_manual.sql  README_MIGRATIONS.md
backend/repositories/: database.py  document_repository.py  morphology_utils.py  panel_repository.py  value_normalizer.py
backend/routers/: analysis_router.py  panel_router.py  search_router.py
backend/scripts/: apply_index_optimization.py  apply_index_optimization_robust.py  etl_pipeline.py  fix_null_panel_fields.py  migrate_qa_format.py  migrate_tsvector_morphology.py  regenerate_embeddings.py
backend/services/: analysis_service.py  comparison_group_finder.py  metadata_loader.py  search_service.py  statistics_calculator.py
